# C7_SmartCalc_v1

./: Doxyfile  Makefile
calc/: calc.cpp  calc.h  calc.pro  calc.ui  credit_calc.cpp  depos.h  depos.ui  parser_functions.cpp  parser_header.h  qcustomplot.h
calc_tests/: backend_tests.c
front/: CMakeLists.txt  calc.h  credit_calc.h  credit_calc.ui  depos.cpp  main.cpp  parser.c  parser.h  qcustomplot.h
